avances con boostrap

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer class="bg-dark">
-	<p class="text-light">Desarrollador por Jonathan Castro</p>
+	<p class="text-light text-center">Desarrollado por Jonathan Castro</p>
 	
 </footer>
