--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>main</h1>
+<app-navbar></app-navbar>
+<div class="row">
+  <div class="container">
+    <h1>main</h1>
+  </div>
+</div>
 <app-footer></app-footer>
 
