--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-navbar></app-navbar>
 <div class="row">
   <div class="container">
-    <h1>main</h1>
+    <!-- <h1>main</h1> -->
+    <!-- actua como un componete, un marcador -->
+    <router-outlet></router-outlet>
   </div>
 </div>
 <app-footer></app-footer>
