--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,13 +4,13 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">Home</a>
+      <a routerLink="/" routerLinkActive="active" class="nav-link">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Register</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Login</a>
+      <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
     </li>
   </ul>
 
