agregando vistas register y login form

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,12 +2,16 @@
 <br>
 <div class="col-6 offset-3">
 
-	<h1>Login</h1>
+	<h1>Register</h1>
 	<hr>
 
 	<form action="register_submit" method="post" accept-charet="utf-8">
 
-		<div>			
+		<div>
+			<input type="text" class="form-control" name="first_name" placeholder="first name">
+			<br>
+			<input type="text" class="form-control" name="last_name" placeholder="last name">
+			<br>
 			<input type="text" class="form-control" name="email" placeholder="email">
 			<br>
 			<input type="password" class="form-control" name="password" placeholder="password">
@@ -21,4 +25,3 @@
 </div>
 <br>
 <br>
-
