--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       <a routerLink="/" routerLinkActive="active" class="nav-link">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Register</a>
+      <a routerLink="/register" routerLinkActive="active" class="nav-link">Register</a>
     </li>
     <li class="nav-item">
       <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
